--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "lottie-ios": "3.1.8",
+    "lottie-react-native": "^4.0.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-countdown-component": "^2.7.1",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
@@ -28,7 +32,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
