--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^5.14.5",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo": "~41.0.1",
+    "expo-clipboard": "~1.0.2",
+    "expo-notifications": "~0.11.6",
     "expo-status-bar": "~1.0.4",
     "lottie-ios": "3.1.8",
     "lottie-react-native": "^4.0.2",
