--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
 		"android": {
 			"package": "com.breath263.telechat",
 			"adaptiveIcon": {
-				"foregroundImage": "./assets/adaptive-icon.png",
+				"foregroundImage": "./assets/icon.png",
 				"backgroundColor": "#FFFFFF"
 			},
 			"googleServicesFile": "./google-services.json"
