add display picture

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo": "~41.0.1",
     "expo-clipboard": "~1.0.2",
+    "expo-image-manipulator": "~9.1.0",
+    "expo-image-picker": "~10.1.4",
     "expo-notifications": "~0.11.6",
     "expo-status-bar": "~1.0.4",
     "lottie-ios": "3.1.8",
@@ -28,6 +30,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-paper": "^4.9.1",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
