--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/stack": "^5.14.5",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo": "~41.0.1",
+    "expo-app-loading": "^1.0.3",
     "expo-clipboard": "~1.0.2",
+    "expo-font": "~9.1.0",
     "expo-image-manipulator": "~9.1.0",
     "expo-image-picker": "~10.1.4",
     "expo-notifications": "~0.11.6",
